--- a/publications.html
+++ b/publications.html
@@ -60,6 +60,70 @@
 <div class="container"> <!-- begin of publication list -->
 
 <div class="container mt-4">
+<div class="row">
+	<div class="col-lg-12 text-start">
+		<h2>2022</h2>
+	</div>
+</div>
+</div>
+
+<div class="container">
+	<div class="row gx-5 gy-4">
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/21_arxiv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Deep Point Cloud Reconstruction</h4>
+			<p class="text-muted">
+				Jaesung Choe, Byeongin Joung, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon.
+				<em>International Conference on Learning Representations (<b>ICLR</b>), 2022</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2111.11704" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_Deep_ICLR_2022" aria-expanded="false" aria-controls="Choe_Deep_ICLR_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Choe_Deep_ICLR_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Choe_Deep_ICLR_2022,<br>
+							Title={Deep Point Cloud Reconstruction},<br>
+							Author={Jaesung Choe and Byeongin Joung and Francois Rameau and Jaesik Park and In So Kweon},<br>
+							Booktitle={Proceedings of the International Conference on Learning Representations (ICLR)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/21_tog.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">TextureMe: High-quality Textured Scene Reconstruction in Real-time</h4>
+			<p class="text-muted">
+				Jungeon Kim, Hyomin Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee.
+				<em>ACM Transactions on Graphics (<b>ToG</b>), 2022</em>
+				<br>(will be presented at <b>SIGGRAPH2022</b>)
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_TextureMe_ToG_2022" aria-expanded="false" aria-controls="Kim_TextureMe_ToG_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_TextureMe_ToG_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kim_TextureMe_ToG_2022,<br>
+							Title={TextureMe: High-quality Textured Scene Reconstruction in Real-time},<br>
+							Author={Jungeon Kim and Hyomin Kim and Hyeonseo Nam and Jaesik Park and Seungyong Lee},<br>
+							Journal={ACM Transactions on Graphics (ToG)},<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="container mt-4">
 	<hr class="py-1">
 </div>
 
@@ -250,30 +314,6 @@
 							Author={Jinsoo Choi and Jaesik Park and In So Kweon},<br>
 							Booktitle={Proceedings of the The British Machine Vision Conference (BMVC)},<br>
 							Year={2021}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center">
-			<img src="publications/data/21_tog.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">TextureMe: High-quality Textured Scene Reconstruction in Real-time</h4>
-			<p class="text-muted">
-				Jungeon Kim, Hyomin Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee.
-				<em>ACM Transactions on Graphics (<b>ToG</b>), 2021</em>
-			</p>
-			<p>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_TextureMe_ToG_2021" aria-expanded="false" aria-controls="Kim_TextureMe_ToG_2021">BibTeX</a>
-			</p>
-			<div class="collapse" id="Kim_TextureMe_ToG_2021">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Kim_TextureMe_ToG_2021,<br>
-							Title={TextureMe: High-quality Textured Scene Reconstruction in Real-time},<br>
-							Author={Jungeon Kim and Hyomin Kim and Hyeonseo Nam and Jaesik Park and Seungyong Lee},<br>
-							Journal={ACM Transactions on Graphics (ToG)},<br>
 							}
 						</p>
 					</div>
