--- a/publications.html
+++ b/publications.html
@@ -95,6 +95,31 @@
 				</div>
 			</div>
 		</div>
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/21_tog.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">TextureMe: High-quality Textured Scene Reconstruction in Real-time</h4>
+			<p class="text-muted">
+				Jungeon Kim, Hyomin Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee.
+				<em>ACM Transactions on Graphics (<b>ToG</b>), 2022</em>
+				<br>(will be presented at <b>SIGGRAPH2022</b>)
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_TextureMe_ToG_2022" aria-expanded="false" aria-controls="Kim_TextureMe_ToG_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kim_TextureMe_ToG_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kim_TextureMe_ToG_2022,<br>
+							Title={TextureMe: High-quality Textured Scene Reconstruction in Real-time},<br>
+							Author={Jungeon Kim and Hyomin Kim and Hyeonseo Nam and Jaesik Park and Seungyong Lee},<br>
+							Journal={ACM Transactions on Graphics (ToG)},<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
@@ -290,30 +315,6 @@
 							Author={Jinsoo Choi and Jaesik Park and In So Kweon},<br>
 							Booktitle={Proceedings of the British Machine Vision Conference (BMVC)},<br>
 							Year={2021}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center">
-			<img src="publications/data/21_tog.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">TextureMe: High-quality Textured Scene Reconstruction in Real-time</h4>
-			<p class="text-muted">
-				Jungeon Kim, Hyomin Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee.
-				<em>ACM Transactions on Graphics (<b>ToG</b>), 2021</em>
-			</p>
-			<p>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kim_TextureMe_ToG_2021" aria-expanded="false" aria-controls="Kim_TextureMe_ToG_2021">BibTeX</a>
-			</p>
-			<div class="collapse" id="Kim_TextureMe_ToG_2021">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@article{Kim_TextureMe_ToG_2021,<br>
-							Title={TextureMe: High-quality Textured Scene Reconstruction in Real-time},<br>
-							Author={Jungeon Kim and Hyomin Kim and Hyeonseo Nam and Jaesik Park and Seungyong Lee},<br>
-							Journal={ACM Transactions on Graphics (ToG)},<br>
 							}
 						</p>
 					</div>
