--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2022.02. I will serve as an Area Chair for <b>ECCV 2021</b>.
+					2022.03. Three papers got accepted to <b>CVPR 2022</b>.
+				</li>
+				<li class="list-group-item">
+					2022.02. I will serve as an Area Chair for <b>ECCV 2022</b>.
 				</li>
 				<li class="list-group-item">
 					2022.01. Our paper about comprehensive point cloud refinement and reconstruction is accepted to <b>ICLR 2022</b>.
