--- a/publications.html
+++ b/publications.html
@@ -70,24 +70,75 @@
 <div class="container">
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
-			<img src="publications/data/21_arxiv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Deep Point Cloud Reconstruction</h4>
+			<img src="publications/data/22_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Instance-wise Occlusion and Depth Orders in Natural Scenes</h4>
 			<p class="text-muted">
-				Jaesung Choe, Byeongin Joung, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon.
-				<em>International Conference on Learning Representations (<b>ICLR</b>), 2022</em>
+				Hyunmin Lee and <b>Jaesik Park</b>.
+				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</em>
 			</p>
 			<p>
-				<a href="https://arxiv.org/abs/2111.11704" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_Deep_ICLR_2022" aria-expanded="false" aria-controls="Choe_Deep_ICLR_2022">BibTeX</a>
+				<a href="https://arxiv.org/abs/2111.14562" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Instancewise_CVPR_2022" aria-expanded="false" aria-controls="Lee_Instancewise_CVPR_2022">BibTeX</a>
 			</p>
-			<div class="collapse" id="Choe_Deep_ICLR_2022">
+			<div class="collapse" id="Lee_Instancewise_CVPR_2022">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Choe_Deep_ICLR_2022,<br>
-							Title={Deep Point Cloud Reconstruction},<br>
-							Author={Jaesung Choe and Byeongin Joung and Francois Rameau and Jaesik Park and In So Kweon},<br>
-							Booktitle={Proceedings of the International Conference on Learning Representations (ICLR)},<br>
+							@inproceedings{Lee_Instancewise_CVPR_2022,<br>
+							Title={Instance-wise Occlusion and Depth Orders in Natural Scenes},<br>
+							Author={Hyunmin Lee and Jaesik Park},<br>
+							Booktitle={Proceedings of the International Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_cvpr2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Fast Point Transformer</h4>
+			<p class="text-muted">
+				Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and <b>Jaesik Park</b>.
+				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2112.04702" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Fast_CVPR_2022" aria-expanded="false" aria-controls="Park_Fast_CVPR_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_Fast_CVPR_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Park_Fast_CVPR_2022,<br>
+							Title={Fast Point Transformer},<br>
+							Author={Chunghyun Park and Yoonwoo Jeong and Minsu Cho and Jaesik Park},<br>
+							Booktitle={Proceedings of the International Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_cvpr3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>3D Scene Painting via Semantic Image Synthesis</h4>
+			<p class="text-muted">
+				Jaebong Jeong, Janghun Jo, Sunghyun Cho, and <b>Jaesik Park</b>.
+				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jeong_3D_CVPR_2022" aria-expanded="false" aria-controls="Jeong_3D_CVPR_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Jeong_3D_CVPR_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Jeong_3D_CVPR_2022,<br>
+							Title={3D Scene Painting via Semantic Image Synthesis},<br>
+							Author={Jaebong Jeong and Janghun Jo and Sunghyun Cho and Jaesik Park},<br>
+							Booktitle={Proceedings of the International Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
 							Year={2022}<br>
 							}
 						</p>
@@ -114,6 +165,32 @@
 							Title={TextureMe: High-quality Textured Scene Reconstruction in Real-time},<br>
 							Author={Jungeon Kim and Hyomin Kim and Hyeonseo Nam and Jaesik Park and Seungyong Lee},<br>
 							Journal={ACM Transactions on Graphics (ToG)},<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/21_arxiv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Deep Point Cloud Reconstruction</h4>
+			<p class="text-muted">
+				Jaesung Choe, Byeongin Joung, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon.
+				<em>International Conference on Learning Representations (<b>ICLR</b>), 2022</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2111.11704" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_Deep_ICLR_2022" aria-expanded="false" aria-controls="Choe_Deep_ICLR_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Choe_Deep_ICLR_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Choe_Deep_ICLR_2022,<br>
+							Title={Deep Point Cloud Reconstruction},<br>
+							Author={Jaesung Choe and Byeongin Joung and Francois Rameau and Jaesik Park and In So Kweon},<br>
+							Booktitle={Proceedings of the International Conference on Learning Representations (ICLR)},<br>
+							Year={2022}<br>
 							}
 						</p>
 					</div>
@@ -157,58 +234,6 @@
 							Title={HUMBI: A Large Multiview Dataset of Human Body Expressions and Benchmark Challenge},<br>
 							Author={Jae Shin Yoon and Zhixuan Yu and Jaesik Park and Hyun Soo Park},<br>
 							Journal={Transactions on Pattern Analysis and Machine Intelligence (TPAMI)},<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center">
-			<img src="publications/data/21_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Instance-wise Occlusion and Depth Orders in Natural Scenes</h4>
-			<p class="text-muted">
-				Hyunmin Lee and <b>Jaesik Park</b>.
-				<em>2111.14562 (arXiv), 2021</em>
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2111.14562" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Instancewise_arXiv_2021" aria-expanded="false" aria-controls="Lee_Instancewise_arXiv_2021">BibTeX</a>
-			</p>
-			<div class="collapse" id="Lee_Instancewise_arXiv_2021">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@inproceedings{Lee_Instancewise_arXiv_2021,<br>
-							Title={Instance-wise Occlusion and Depth Orders in Natural Scenes},<br>
-							Author={Hyunmin Lee and Jaesik Park},<br>
-							Booktitle={Proceedings of the 2111.14562 (arXiv)},<br>
-							Year={2021}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center">
-			<img src="publications/data/21_arxiv4.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Fast Point Transformer</h4>
-			<p class="text-muted">
-				Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and <b>Jaesik Park</b>.
-				<em>TBA (arXiv), 2021</em>
-			</p>
-			<p>
-				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Fast_arXiv_2021" aria-expanded="false" aria-controls="Park_Fast_arXiv_2021">BibTeX</a>
-			</p>
-			<div class="collapse" id="Park_Fast_arXiv_2021">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@inproceedings{Park_Fast_arXiv_2021,<br>
-							Title={Fast Point Transformer},<br>
-							Author={Chunghyun Park and Yoonwoo Jeong and Minsu Cho and Jaesik Park},<br>
-							Booktitle={Proceedings of the TBA (arXiv)},<br>
-							Year={2021}<br>
 							}
 						</p>
 					</div>
