--- a/lab.html
+++ b/lab.html
@@ -166,6 +166,10 @@
 	<div class="row gx-4 gy-4">
 		<h3>Undergraduate Students (selected)</h3>
 		<div class="col-2 text-center">
+			<h5>Juyong Lee</h5>
+			Student at POSTECH<br>
+		</div>
+		<div class="col-2 text-center">
 			<h5>Vansh Gupta</h5>
 			Indian Institute of Technology, Delhi (exchange student at POSTECH)<br>
 		</div>
@@ -244,15 +248,29 @@
 				<!-- Ongoing projects -->
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
+						<h5>Google Corp., USA</h5>
+						2022.03-current
+					</div>
+					<p class="mb-0">Google Cloud Platform Credit Award</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Intel Corp., USA</h5>
+						2022.03-2023.03
+					</div>
+					<p class="mb-0">3D Vision Related Projects (planned)</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
 						<h5>Qualcomm Corp., USA</h5>
-						2022.02-2023.02
+						2022.03-2023.03
 					</div>
 					<p class="mb-0">Visual common sense (planned)</p>
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>Osstem Implant, Republic of Korea</h5>
-						2022.02-2022.06
+						2022.03-2022.07
 					</div>
 					<p class="mb-0">High-quality 3D reconstruction (planned)</p>
 				</li>
@@ -276,14 +294,7 @@
 						2021.05-2022.05
 					</div>
 					<p class="mb-0">Camera localization</p>
-				</li>
-				<li class="list-group-item">
-					<div class="d-flex w-100 justify-content-between">
-						<h5>Intel Corp., USA</h5>
-						2020.04-current
-					</div>
-					<p class="mb-0">Team Open3D</p>
-				</li>
+				</li>				
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>Ministry of Science and ICT, Republic of Korea</h5>
@@ -291,14 +302,21 @@
 					</div>
 					<p class="mb-0">과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실</p>
 				</li>
+				<!-- Finished projects -->
 				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>POSTECH, Republic of Korea</h5>
 						2019.04-2022.02
 					</div>
 					<p class="mb-0">포항공과대학교 신임교수 초기정착비</p>
-				</li>				
-				<!-- Finished projects -->
+				</li>
+				<li class="list-group-item list-group-item-light">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Intel Corp., USA</h5>
+						2020.04-2022.02
+					</div>
+					<p class="mb-0">Team Open3D. Contributed Nearest Neighbor Module</p>
+				</li>
 				<li class="list-group-item list-group-item-light">
 					<div class="d-flex w-100 justify-content-between">
 						<h5>Osstem Implant, Republic of Korea</h5>
