--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -202,7 +202,7 @@
 				<!-- Ongoing projects -->
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
-						<h5>Google Corp., USA</h5>
+						<h5>Google LLC, USA</h5>
 						2022.03-current
 					</div>
 					<p class="mb-0">Google Cloud Platform Credit Award</p>
@@ -216,7 +216,7 @@
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
-						<h5>Qualcomm Corp., USA</h5>
+						<h5>Qualcomm, USA</h5>
 						2022.03-2023.03
 					</div>
 					<p class="mb-0">Visual common sense (planned)</p>
