--- a/publications.html
+++ b/publications.html
@@ -78,6 +78,7 @@
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2111.14562" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/POSTECH-CVLab/InstaOrder" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Instancewise_CVPR_2022" aria-expanded="false" aria-controls="Lee_Instancewise_CVPR_2022">BibTeX</a>
 			</p>
 			<div class="collapse" id="Lee_Instancewise_CVPR_2022">
