--- a/lab.html
+++ b/lab.html
@@ -258,7 +258,7 @@
 						<h5>Intel Corp., USA</h5>
 						2022.03-2023.03
 					</div>
-					<p class="mb-0">3D Vision Related Projects (planned)</p>
+					<p class="mb-0">High-fidelity 3D Reconstruction</p>
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
@@ -272,21 +272,28 @@
 						<h5>Osstem Implant, Republic of Korea</h5>
 						2022.03-2022.07
 					</div>
-					<p class="mb-0">High-quality 3D reconstruction (planned)</p>
+					<p class="mb-0">3D reconstruction system</p>
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
-						<h5>MCST, Republic of Korea</h5>
+						<h5>Ministry of Science and ICT, Republic of Korea</h5>
+						2021.09-current
+					</div>
+					<p class="mb-0">과학기술정보통신부, 인공지능혁신허브 연구개발</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Ministry of Science and ICT, Republic of Korea</h5>
 						2021.06-2023.12
 					</div>
 					<p class="mb-0">문화체육관광부, 포스텍-한예종 문화기술선도대학원</p>
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
-						<h5>IITP, Republic of Korea</h5>
+						<h5>Ministry of Science and ICT, Republic of Korea</h5>
 						2021.05-2024.05
 					</div>
-					<p class="mb-0">Image inpainting and synthesis</p>
+					<p class="mb-0">과학기술정보통신부, 시각적 상식에 기반한 영상 인페인팅</p>
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
