--- a/source/html/lab.html
+++ b/source/html/lab.html
@@ -237,7 +237,7 @@
 				</li>
 				<li class="list-group-item">
 					<div class="d-flex w-100 justify-content-between">
-						<h5>Ministry of Science and ICT, Republic of Korea</h5>
+						<h5>Ministry of Culture, Sports and Tourism, Republic of Korea</h5>
 						2021.06-2023.12
 					</div>
 					<p class="mb-0">문화체육관광부, 포스텍-한예종 문화기술선도대학원</p>
@@ -262,6 +262,13 @@
 						2020.03-2023.03
 					</div>
 					<p class="mb-0">과학기술정보통신부 신진연구자 지원사업 + 신진연구 최초혁신실험실</p>
+				</li>
+				<li class="list-group-item">
+					<div class="d-flex w-100 justify-content-between">
+						<h5>Ministry of Science and ICT, Republic of Korea</h5>
+						2020.02-current
+					</div>
+					<p class="mb-0">과학기술정보통신부, 인공지능대학원 지원사업 (POSTECH)</p>
 				</li>
 				<!-- Finished projects -->
 				<li class="list-group-item list-group-item-light">
