--- a/publications.html
+++ b/publications.html
@@ -296,7 +296,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_arxiv6.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">Real-time Registration and Reconstruction with Cylindrical LiDAR Images</h4>
+			<h4 class="em-tight">Revisiting LiDAR Registration and Reconstruction: A Range Image Perspective</h4>
 			<p class="text-muted">
 				Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and <b>Jaesik Park</b>.
 				<em>2112.02779 (arXiv), 2021</em>
@@ -304,14 +304,14 @@
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2112.02779" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Dong_Realtime_arXiv_2021" aria-expanded="false" aria-controls="Dong_Realtime_arXiv_2021">BibTeX</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Dong_Revisiting_arXiv_2021" aria-expanded="false" aria-controls="Dong_Revisiting_arXiv_2021">BibTeX</a>
 			</p>
-			<div class="collapse" id="Dong_Realtime_arXiv_2021">
+			<div class="collapse" id="Dong_Revisiting_arXiv_2021">
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@article{Dong_Realtime_arXiv_2021,<br>
-							Title={Real-time Registration and Reconstruction with Cylindrical LiDAR Images},<br>
+							@article{Dong_Revisiting_arXiv_2021,<br>
+							Title={Revisiting LiDAR Registration and Reconstruction: A Range Image Perspective},<br>
 							Author={Wei Dong and Kwonyoung Ryu and Michael Kaess and Jaesik Park},<br>
 							Journal={2112.02779 (arXiv)},<br>
 							Year={2021}<br>
