--- a/publications.html
+++ b/publications.html
@@ -105,6 +105,7 @@
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2112.04702" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/POSTECH-CVLab/FastPointTransformer" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Fast_CVPR_2022" aria-expanded="false" aria-controls="Park_Fast_CVPR_2022">BibTeX</a>
 			</p>
 			<div class="collapse" id="Park_Fast_CVPR_2022">
