--- a/publications.html
+++ b/publications.html
@@ -104,6 +104,7 @@
 				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</em>
 			</p>
 			<p>
+				<a href="http://cvlab.postech.ac.kr/research/FPT/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a href="https://arxiv.org/abs/2112.04702" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/POSTECH-CVLab/FastPointTransformer" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Fast_CVPR_2022" aria-expanded="false" aria-controls="Park_Fast_CVPR_2022">BibTeX</a>
