--- a/publications.html
+++ b/publications.html
@@ -70,6 +70,31 @@
 <div class="container">
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_ijcai.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Learning to Assemble Geometric Shapes</h4>
+			<p class="text-muted">
+				Jinhwi Lee, Jungtaek Kim, Hyunsoo Chung, <b>Jaesik Park</b>, and Minsu Cho.
+				<em>International Joint Conference on Artificial Intelligence (<b>IJCAI</b>), 2022</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Learning_IJCAI_2022" aria-expanded="false" aria-controls="Lee_Learning_IJCAI_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_Learning_IJCAI_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Lee_Learning_IJCAI_2022,<br>
+							Title={Learning to Assemble Geometric Shapes},<br>
+							Author={Jinhwi Lee and Jungtaek Kim and Hyunsoo Chung and Jaesik Park and Minsu Cho},<br>
+							Booktitle={Proceedings of the International Joint Conference on Artificial Intelligence (IJCAI)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
 			<img src="publications/data/22_cvpr1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Instance-wise Occlusion and Depth Orders in Natural Scenes</h4>
 			<p class="text-muted">
