--- a/lab.html
+++ b/lab.html
@@ -75,70 +75,100 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<h3>Graduate Students</h3>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kwonyoung Ryu</h5>
 			2021 Spring<br>
 			Ph.D. student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/junha.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Junha Lee</h5>
 			2021 Fall<br>
 			Ph.D. student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>MinGuk Kang</h5>
 			2020 Spring<br>
-			Master student
+			Integrated Ph.D. Student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Chunghyun Park</h5>
-			2020 Spring<br>
-			Master student
+			2022 Spring<br>
+			Ph.D. student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jin-Oh Cho</h5>
 			2020 Fall<br>
 			Master student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seokjun Ahn</h5>
 			2020 Fall<br>
 			Master student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Ji Ye Kim</h5>
 			2021 Spring<br>
 			Master student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kanghee Lee</h5>
 			2021 Spring<br>
 			Master student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seungjoo Shin</h5>
 			2021 Fall<br>
 			Master student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Dongmin You</h5>
 			2022 Spring<br>
 			Master student
 		</div>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/seunguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seunguk Do</h5>
 			2022 Spring<br>
+			Master student
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/images/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Seoyeon Kim</h5>
+			2022 Fall<br>
+			Master student
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/images/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Pierre E. MUSACCHIO</h5>
+			2022 Fall<br>
+			Master student
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/images/joonghyuk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Joonghyuk Shin</h5>
+			2023 Spring<br>
+			Master student
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/images/juyong.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Juyong Lee</h5>
+			2023 Spring<br>
+			Master student
+		</div>
+		<div class="col-md-3 text-center">
+			<img src="source/images/jinmo.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<h5>Jinmo Kim</h5>
+			2023 Spring<br>
 			Master student
 		</div>
 	</div>
@@ -146,14 +176,14 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<h3>Alumni</h3>
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaebong Jeong</h5>
 			2021 Fall<br>
 			Master degree<br>
 			Joined a stealth mode startup
 		</div>		
-		<div class="col-3 text-center">
+		<div class="col-md-3 text-center">
 			<img src="source/images/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Hyunmin Lee</h5>
 			2021 Spring<br>
@@ -165,36 +195,36 @@
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<h3>Undergraduate Students (selected)</h3>
-		<div class="col-2 text-center">
+		<div class="col-md-3 text-center">
 			<h5>Juyong Lee</h5>
 			Student at POSTECH<br>
 		</div>
-		<div class="col-2 text-center">
+		<div class="col-md-3 text-center">
 			<h5>Vansh Gupta</h5>
 			Indian Institute of Technology, Delhi (exchange student at POSTECH)<br>
 		</div>
-		<div class="col-2 text-center">
+		<div class="col-md-3 text-center">
 			<h5>Jinmo Kim</h5>
 			Selected as the best undergraduate research project (최우수 UGRP) 2022.02<br>
 		</div>
-		<div class="col-2 text-center">
+		<div class="col-md-3 text-center">
 			<h5>Seoyoung Choi</h5>
 			Selected as the best undergraduate research project (최우수 UGRP) 2022.02<br>
 		</div>
-		<div class="col-2 text-center">
+		<div class="col-md-3 text-center">
 			<h5>Pierre E. MUSACCHIO</h5>
 			École Nationale Supérieure de Cognitique (exchange student at POSTECH)<br>
 		</div>
-		<div class="col-2 text-center">
+		<div class="col-md-3 text-center">
 			<h5>Hansheng Guo</h5>
 			The Chinese University of Hong Kong (exchange student at POSTECH) 2021<br>
 		</div>
-		<div class="col-2 text-center">
+		<div class="col-md-3 text-center">
 			<h5>Seoyeon Kim</h5>
 			Selected as the best research project (과제연구 최우수상) 2021.07<br>
 		</div>
-		<div class="col-2 text-center">
-			<h5>Junghyuk Shin</h5>
+		<div class="col-md-3 text-center">
+			<h5>Joonghyuk Shin</h5>
 			Selected as the best undergraduate research project (최우수 UGRP) 2020.07<br>
 		</div>		
 	</div>
