adding studiogan arxiv

--- a/publications.html
+++ b/publications.html
@@ -70,6 +70,34 @@
 <div class="container">
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_studio_gan.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis</h4>
+			<p class="text-muted">
+				MinGuk Kang, Joonghyuk Shin, and <b>Jaesik Park</b>.
+				<em>2206.09479 (arXiv), 2022</em>
+				<br><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Fork</a>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2206.09479" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kang_StudioGAN_arXiv_2022" aria-expanded="false" aria-controls="Kang_StudioGAN_arXiv_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kang_StudioGAN_arXiv_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Kang_StudioGAN_arXiv_2022,<br>
+							Title={StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis},<br>
+							Author={MinGuk Kang and Joonghyuk Shin and Jaesik Park},<br>
+							Journal={2206.09479 (arXiv)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
 			<img src="publications/data/22_ijcai.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Learning to Assemble Geometric Shapes</h4>
 			<p class="text-muted">
@@ -380,7 +408,6 @@
 			<p class="text-muted">
 				Minguk Kang, Woohyeon Shim, Minsu Cho, and <b>Jaesik Park</b>.
 				<em>Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2021</em>
-				<br><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/PyTorch-StudioGAN on GitHub">Fork</a>
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2111.01118" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
