eccv2022 accepted papers

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -20,6 +20,12 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
+					2022.07. <a href="publications.html">Three papers</a> got accepted to <b>ECCV 2022</b>.
+				</li>
+				<li class="list-group-item">
+					2022.06. <a href="https://arxiv.org/abs/2206.09479" target="_blank"><b>StudioGAN</b> paper version</a> - we release an extensive benchmark of state-of-the-art GANs. 
+				</li>
+				<li class="list-group-item">
 					2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
 				</li>
 				<li class="list-group-item">
