eccv2022 accepted papers

--- a/publications.html
+++ b/publications.html
@@ -70,6 +70,82 @@
 <div class="container">
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_eccv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Style-Agnostic Reinforcement Learning</h4>
+			<p class="text-muted">
+				Juyong Lee, Seokjun Ahn, and <b>Jaesik Park</b>.
+				<em>European Conference on Computer Vision (<b>ECCV</b>), 2022</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_StyleAgnostic_ECCV_2022" aria-expanded="false" aria-controls="Lee_StyleAgnostic_ECCV_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_StyleAgnostic_ECCV_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Lee_StyleAgnostic_ECCV_2022,<br>
+							Title={Style-Agnostic Reinforcement Learning},<br>
+							Author={Juyong Lee and Seokjun Ahn and Jaesik Park},<br>
+							Booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_eccv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>PointMixer: MLP-Mixer for Point Cloud Understanding</h4>
+			<p class="text-muted">
+				Jaesung Choe*, Chunghyun Park*, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon.
+				<em>European Conference on Computer Vision (<b>ECCV</b>), 2022</em>
+				<br>(*Equal contribution)
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_PointMixer_ECCV_2022" aria-expanded="false" aria-controls="Choe_PointMixer_ECCV_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Choe_PointMixer_ECCV_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Choe_PointMixer_ECCV_2022,<br>
+							Title={PointMixer: MLP-Mixer for Point Cloud Understanding},<br>
+							Author={Jaesung Choe and Chunghyun Park and Francois Rameau and Jaesik Park and In So Kweon},<br>
+							Booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_eccv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4 class="em-tight">CostDCNet: Cost Volume based Depth Completion of Single RGB-D Images</h4>
+			<p class="text-muted">
+				Jaewon Kam, Jungeon Kim, Soongjin Kim, <b>Jaesik Park</b>, and Seungyong Lee.
+				<em>European Conference on Computer Vision (<b>ECCV</b>), 2022</em>
+			</p>
+			<p>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Kam_CostDCNet_ECCV_2022" aria-expanded="false" aria-controls="Kam_CostDCNet_ECCV_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Kam_CostDCNet_ECCV_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Kam_CostDCNet_ECCV_2022,<br>
+							Title={CostDCNet: Cost Volume based Depth Completion of Single RGB-D Images},<br>
+							Author={Jaewon Kam and Jungeon Kim and Soongjin Kim and Jaesik Park and Seungyong Lee},<br>
+							Booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
 			<img src="publications/data/22_studio_gan.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>StudioGAN: A Taxonomy and Benchmark of GANs for Image Synthesis</h4>
 			<p class="text-muted">
@@ -315,33 +391,6 @@
 							Title={Putting 3D Spatially Sparse Networks on a Diet},<br>
 							Author={Junha Lee and Christopher Choy and Jaesik Park},<br>
 							Booktitle={Proceedings of the 2112.01316 (arXiv)},<br>
-							Year={2021}<br>
-							}
-						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="col-lg-4 text-center">
-			<img src="publications/data/21_arxiv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>PointMixer: MLP-Mixer for Point Cloud Understanding</h4>
-			<p class="text-muted">
-				Jaesung Choe*, Chunghyun Park*, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon.
-				<em>2111.11187 (arXiv), 2021</em>
-				<br>(*Equal contribution)
-			</p>
-			<p>
-				<a href="https://arxiv.org/abs/2111.11187" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Choe_PointMixer_arXiv_2021" aria-expanded="false" aria-controls="Choe_PointMixer_arXiv_2021">BibTeX</a>
-			</p>
-			<div class="collapse" id="Choe_PointMixer_arXiv_2021">
-				<div class="card">
-					<div class="card-body">
-						<p class="card-text text-start fw-lighter">
-							@inproceedings{Choe_PointMixer_arXiv_2021,<br>
-							Title={PointMixer: MLP-Mixer for Point Cloud Understanding},<br>
-							Author={Jaesung Choe and Chunghyun Park and Francois Rameau and Jaesik Park and In So Kweon},<br>
-							Booktitle={Proceedings of the 2111.11187 (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
