--- a/about_me.html
+++ b/about_me.html
@@ -122,7 +122,7 @@
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">&copy; Jaesik Park 2017-2021</p>
+								<p class="copyright text-center">&copy; Jaesik Park</p>
 								<p><br></p>
 						</div>
 				</div>
