--- a/publications.html
+++ b/publications.html
@@ -122,7 +122,7 @@
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/22_eccv3.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4 class="em-tight">CostDCNet: Cost Volume based Depth Completion of Single RGB-D Images</h4>
+			<h4 class="em-tight">CostDCNet: Cost Volume based Depth Completion for a Single RGB-D Image</h4>
 			<p class="text-muted">
 				Jaewon Kam, Jungeon Kim, Soongjin Kim, <b>Jaesik Park</b>, and Seungyong Lee.
 				<em>European Conference on Computer Vision (<b>ECCV</b>), 2022</em>
@@ -135,7 +135,7 @@
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
 							@inproceedings{Kam_CostDCNet_ECCV_2022,<br>
-							Title={CostDCNet: Cost Volume based Depth Completion of Single RGB-D Images},<br>
+							Title={CostDCNet: Cost Volume based Depth Completion for a Single RGB-D Image},<br>
 							Author={Jaewon Kam and Jungeon Kim and Soongjin Kim and Jaesik Park and Seungyong Lee},<br>
 							Booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},<br>
 							Year={2022}<br>
@@ -261,6 +261,7 @@
 				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</em>
 			</p>
 			<p>
+				<a href="http://cvlab.postech.ac.kr/research/3DScenePainting/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jeong_3D_CVPR_2022" aria-expanded="false" aria-controls="Jeong_3D_CVPR_2022">BibTeX</a>
 			</p>
 			<div class="collapse" id="Jeong_3D_CVPR_2022">
