--- a/source/html/index.html
+++ b/source/html/index.html
@@ -20,7 +20,7 @@
 			<h2>News</h2>
 			<ul class="list-group shadow-sm">
 				<li class="list-group-item">
-					2022.07. <a href="publications.html">Three papers</a> got accepted to <b>ECCV 2022</b>.
+					2022.07. <a href="https://jaesik.info/publications">Three papers</a> got accepted to <b>ECCV 2022</b>.
 				</li>
 				<li class="list-group-item">
 					2022.06. <a href="https://arxiv.org/abs/2206.09479" target="_blank"><b>StudioGAN</b> paper version</a> - we release an extensive benchmark of state-of-the-art GANs. 
