--- a/source/html/academic_activities.html
+++ b/source/html/academic_activities.html
@@ -5,6 +5,7 @@
 			<h2>Program Committee</h2>
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
+					<mark>Associate Editor</mark>, Int. Conf. on Robotics and Automation (ICRA), 2023<br>
 					<mark>Area Chair</mark>, European Conf. on Computer Vision (ECCV), 2022<br>
 					<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2021<br>
 					<mark>Senior Program Committee</mark>, Int. Joint Conf. on Artificial Intelligence (IJCAI), 2021<br>
