--- a/publications.html
+++ b/publications.html
@@ -70,6 +70,32 @@
 <div class="container">
 	<div class="row gx-5 gy-4">
 		<div class="col-lg-4 text-center">
+			<img src="publications/data/22_arxiv2.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Learning to Register Unbalanced Point Pairs</h4>
+			<p class="text-muted">
+				Kanghee Lee, Junha Lee, and <b>Jaesik Park</b>.
+				<em>2207.04221 (arXiv), 2022</em>
+			</p>
+			<p>
+				<a href="https://arxiv.org/abs/2207.04221" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Learning_arXiv_2022" aria-expanded="false" aria-controls="Lee_Learning_arXiv_2022">BibTeX</a>
+			</p>
+			<div class="collapse" id="Lee_Learning_arXiv_2022">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Lee_Learning_arXiv_2022,<br>
+							Title={Learning to Register Unbalanced Point Pairs},<br>
+							Author={Kanghee Lee and Junha Lee and Jaesik Park},<br>
+							Journal={2207.04221 (arXiv)},<br>
+							Year={2022}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="col-lg-4 text-center">
 			<img src="publications/data/22_eccv1.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
 			<h4>Style-Agnostic Reinforcement Learning</h4>
 			<p class="text-muted">
