--- a/source/html/index.html
+++ b/source/html/index.html
@@ -1,4 +1,3 @@
-<!-- Source -->
 <div class="container mt-4">
 	<div class="row gx-4 gy-4">
 		<div class="col-lg-12 text-start">
@@ -12,8 +11,8 @@
 			<h1>Jaesik Park</h1>
 			<ul class="list-group mb-4 shadow-sm">
 				<li class="list-group-item">
-					<p class="lead">Hello! I am an Assistant Professor at POSTECH. 
-					I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together. 
+					<p class="lead">Hello! I am an Assistant Professor at POSTECH.
+					I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together.
 					Please <a href="http://jaesik.info/contact">apply our lab</a> if interested.</p>
 				</li>
 			</ul>
@@ -29,7 +28,7 @@
 					2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
 				</li>
 				<li class="list-group-item">
-					2022.03. Three papers got accepted to <b>CVPR 2022</b>.
+					2022.03. Three papers got accepted to <b>CVPR 2022</b>.2022.06. Gave a remote talk at <b>Havard University</b>'s <a href="https://cmsa.fas.harvard.edu/interdisciplinary-science-seminar/" target="_blank">Interdisciplinary Science Seminar</a>.
 				</li>
 				<li class="list-group-item">
 					2022.02. I will serve as an Area Chair for <b>ECCV 2022</b>.
@@ -74,7 +73,7 @@
 					</li>
 					<li class="list-group-item">
 						2021.03. <b><a href="https://github.com/intel-isl/open3d">Open3D</a></b> received 4.1k Github stars and <b><a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">Pytorch-StudioGAN</a></b> received 1.5k Github stars.
-					</li>			
+					</li>
 					<li class="list-group-item">
 						2020.11. I will serve as an Area Chair for <b>ICCV 2021</b>.
 					</li>
@@ -83,7 +82,7 @@
 					</li>
 					<li class="list-group-item">
 						2020.09. A paper about conditional image generation is accepted to <b>NeurIPS 2020</b>.
-					</li>			
+					</li>
 					<li class="list-group-item">
 						2020.08. I will serve as an Senior Program Committee for <b>AAAI 2021</b>.
 					</li>
@@ -143,7 +142,7 @@
 					</li>
 					<li class="list-group-item">
 						2018.01. We are releasing <b>Open3D</b>: a modern library for 3D data processing. Please visit <a href="http://www.open3d.org" target="_blank">www.open3d.org</a>.
-					</li>	
+					</li>
 					<li class="list-group-item">
 						2018.01. A multi-task network for joint head detection and pose estimation is accepted to RAS.
 					</li>
@@ -170,6 +169,6 @@
 					</li>
 				</ul>
 			</div>
-		</div> 
+		</div>
 	</div>
 </div>
