--- a/publications.html
+++ b/publications.html
@@ -232,7 +232,7 @@
 				<em>International Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2022</em>
 			</p>
 			<p>
-				<a href="https://arxiv.org/abs/2111.14562" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Lee_Instance-Wise_Occlusion_and_Depth_Orders_in_Natural_Scenes_CVPR_2022_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/POSTECH-CVLab/InstaOrder" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Lee_Instancewise_CVPR_2022" aria-expanded="false" aria-controls="Lee_Instancewise_CVPR_2022">BibTeX</a>
 			</p>
@@ -260,7 +260,7 @@
 			</p>
 			<p>
 				<a href="http://cvlab.postech.ac.kr/research/FPT/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-				<a href="https://arxiv.org/abs/2112.04702" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Park_Fast_Point_Transformer_CVPR_2022_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="https://github.com/POSTECH-CVLab/FastPointTransformer" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Fast_CVPR_2022" aria-expanded="false" aria-controls="Park_Fast_CVPR_2022">BibTeX</a>
 			</p>
@@ -288,6 +288,7 @@
 			</p>
 			<p>
 				<a href="http://cvlab.postech.ac.kr/research/3DScenePainting/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
+				<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Jeong_3D_Scene_Painting_via_Semantic_Image_Synthesis_CVPR_2022_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Jeong_3D_CVPR_2022" aria-expanded="false" aria-controls="Jeong_3D_CVPR_2022">BibTeX</a>
 			</p>
 			<div class="collapse" id="Jeong_3D_CVPR_2022">
