rename member images

--- a/lab.html
+++ b/lab.html
@@ -68,7 +68,7 @@
 		</div>
 		<div class="col-lg-6">
 			<h3>Computer Vision Lab.</h3>
-			<img src="source/images/lab.jpg" class="img-thumbnail shadow-sm">
+			<img src="source/members/lab.jpg" class="img-thumbnail shadow-sm">
 		</div>
 	</div>
 </div>
@@ -76,97 +76,97 @@
 	<div class="row gx-4 gy-4">
 		<h3>Graduate Students</h3>
 		<div class="col-md-3 text-center">
-			<img src="source/images/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/kwon-young.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kwonyoung Ryu</h5>
 			2021 Spring<br>
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/junha.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/junha.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Junha Lee</h5>
 			2021 Fall<br>
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/minguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>MinGuk Kang</h5>
 			2020 Spring<br>
 			Integrated Ph.D. Student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/chunghyun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Chunghyun Park</h5>
 			2022 Spring<br>
 			Ph.D. student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/jinoh.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jin-Oh Cho</h5>
 			2020 Fall<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/seokjun.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seokjun Ahn</h5>
 			2020 Fall<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/jiye.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Ji Ye Kim</h5>
 			2021 Spring<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/ganghee.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Kanghee Lee</h5>
 			2021 Spring<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/seungju.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seungjoo Shin</h5>
 			2021 Fall<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/dongmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Dongmin You</h5>
 			2022 Spring<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/seunguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/seunguk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seunguk Do</h5>
 			2022 Spring<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/seoyeon.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Seoyeon Kim</h5>
 			2022 Fall<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/pierre.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Pierre E. MUSACCHIO</h5>
 			2022 Fall<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/joonghyuk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/joonghyuk.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Joonghyuk Shin</h5>
 			2023 Spring<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/juyong.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/juyong.jpeg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Juyong Lee</h5>
 			2023 Spring<br>
 			Master student
 		</div>
 		<div class="col-md-3 text-center">
-			<img src="source/images/jinmo.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/jinmo.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jinmo Kim</h5>
 			2023 Spring<br>
 			Master student
@@ -177,14 +177,14 @@
 	<div class="row gx-4 gy-4">
 		<h3>Alumni</h3>
 		<div class="col-md-3 text-center">
-			<img src="source/images/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/jaebong.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Jaebong Jeong</h5>
 			2021 Fall<br>
 			Master degree<br>
 			Joined a stealth mode startup
 		</div>		
 		<div class="col-md-3 text-center">
-			<img src="source/images/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
+			<img src="source/members/hyunmin.jpg" class="rounded-circle img-thumbnail shadow mb-2">
 			<h5>Hyunmin Lee</h5>
 			2021 Spring<br>
 			Master degree<br>
